# 413linux-conf

./: .gitignore  README.md  globle.md  lazyvim.md
Grub/matter/: commd  config.json  example.md  grub.template  theme.txt.template  utils.py
Grub/matter/Matter/: theme.txt
alacritty/: alacritty.toml
code-win/a-pservice/: Cargo.toml
code-win/a-pservice/src/: main.rs
code-win/cover/spi-ili9225/: Cargo.toml
code-win/learnrust/: Cargo.toml
code-win/learnrust/src/: main.rs
code-win/spi-esp32/: Cargo.toml
code-win/spi-esp32/src/: command.rs  main.rs
code-win/spi-ili9225/: Cargo.toml
code-win/spi-ili9225/src/: ili9225.c  main.rs
code-win/ssd1306display/: Cargo.toml
code-win/ssd1306display/src/: main.rs
code-win/webservice/: Cargo.toml
code-win/webservice/.cargo/: config.toml
code-win/webservice/src/: main.rs
fish/: config.fish  fish_plugins  fish_variables  fishcommand.fish
fish/completions/: espup.fish
fish/conf.d/: fish-esp-idf.fish
hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
hypr/scripts/: brightness  volume
lazyvim/lua/plugins/: colorscheme.lua  plugins.lua
nvim/: init.lua  lazy-lock.json  lazyvim.json
nvim/lua/config/: autocmds.lua  options.lua
nvim/lua/plugins/: blinkcmp.lua  colorscheme.lua  extend-bufferline.lua  extend-colorizer-extra-hypr.lua  extend-colorscheme.lua  extend-nvim-lint.lua  extend-rip-substitute.lua  extend-yazi.lua  (+3 more)
tofi/: config
waybar/: config.jsonc  lyrics.lrc  style.css  style.css.back
waybar/scripts/: lyric.bash  netease.sh
wezterm/: wezterm.lua
wezterm/color/: carbonfox.toml
wezterm/colors/: Bamboo.toml
wlogout/: actions  layout
(+2 files in other folders)
