[package]
name = "a-pservice"
version = "0.1.0"
authors = ["aujinm <2020172007.mdjnu@vip.163.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "a-pservice"
harness = false     # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section"] }
anyhow = "1.0"
embedded-svc = "0.28.1"
[build-dependencies]
embuild = "0.33"
