[package]
name = "ssd1306display"
version = "0.1.0"
authors = ["s413"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ssd1306display"
harness = false         # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4.22"
esp-idf-svc = { version = "0.50", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
ssd1306 = "0.9.0"
anyhow = "1.0.95"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
[build-dependencies]
embuild = "0.33"
